# HardwareBoys

Parcktronic/: .cproject  .mxproject  .project  Parcktronic.elf.launch  Parcktronic.ioc
Parcktronic/Core/Inc/: main.h
Parcktronic/Core/Src/: gpio.c  main.c  tim.c
Parcktronic/Debug/: Parcktronic.elf  Parcktronic.hex  Parcktronic.list  Parcktronic.map
Parcktronic/Debug/Core/Src/: main.su  tim.su
Parcktronic/EWARM/: Parcktronic.ewd  Parcktronic.ewp  Project.eww
Parktronic/: .cproject  .gitignore  .mxproject  .project  Parktronic.elf.launch  Parktronic.ioc
Parktronic/Core/Inc/: main.h  stm32f4xx_it.h  tim.h
Parktronic/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c
Parktronic/Debug/: Parktronic.elf  Parktronic.hex  Parktronic.list  Parktronic.map
Parktronic/Debug/Core/Src/: main.su  stm32f4xx_it.su  tim.su
Parktronic/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_rcc_ex.su
backend/: esp-data.php  index.html  index.php  post-esp-data.php  style.css
car_detector/: CMakeLists.txt  Makefile  sdkconfig
car_detector/main/: CMakeLists.txt  https_request_example_main.c
car_detector/main/HWDrivers/optoelectronic_sensor/: optoelectronic_sensor.c  optoelectronic_sensor.h
car_detector/main/SWDrivers/object_detector/: object_detector.c  object_detector.h
